# ChangeLog for dev-libs/qoauth
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*qoauth-9999 (25 Jun 2009)
*qoauth-0.1.0 (25 Jun 2009)

  25 Jun 2009; Dominik Kapusta <d@ayoy.net> +qoauth-0.1.0.ebuild,
  +qoauth-9999.ebuild, +metadata.xml:
  Initial commit.
