@@ -1,4 +1,5 @@
 DIST qoauth-0.1.0-src.tar.bz2 54453 RMD160 03c62787f6f3f16a76aa426ccff897b7ef4be7c0 SHA1 bcc2691b492f50ec42212ec54cd11c6139e48418 SHA256 f430d337322d8031a5cedcd85be2eebeeacb215173db0f020821fb4276a92ad8
-EBUILD qoauth-0.1.0.ebuild 812 RMD160 ffd105d4c5a77f8fd91c2f7c0bc0839d5c2fde5a SHA1 41311c2484326dadfd1bbef3c06b25c0db94579e SHA256 1256fc8a582f38de86aefa422b616685ef4b8a561b429f04c25fdd951eaa007a
-EBUILD qoauth-9999.ebuild 780 RMD160 0795435133a014378590b5f3f317c7599a8ed2ab SHA1 3f13fa01dc46339af14bf9e6c2bfd8fd1983abc5 SHA256 9e9185c610ff769503f52f3a2f861b73d06dcc8fcb8515aba3b9506085af8cdc
+EBUILD qoauth-0.1.0.ebuild 890 RMD160 97e65ead5a34cfad44570c4b32b6eafd1e1f7d82 SHA1 ede195016072175c0c6d77eb2763387d676bb6ed SHA256 1e0dab20d8f8f11576111d0e1e2eb245f4143873c0100cff1c7bcf4132272399
+EBUILD qoauth-9999.ebuild 948 RMD160 7307921c7c726f032a471a0cee1db79d1c5e94b2 SHA1 ad25bbfd571dc1ca3ae70a1785aaa67a58179419 SHA256 a06e4f9881e52878cbb5990f84420918ae00b1e313e8bde58d4bbff17aa3771d
+MISC ChangeLog 429 RMD160 b39d44ef45d59f57b65170391da6835c78325a52 SHA1 1935f2a6322e8411fd612dc1f79643aac5fab22a SHA256 f846d1126461f540d3c15a94dac66eefc0be075d83854e482cb9bd71fe19c9bb
 MISC metadata.xml 285 RMD160 4d6c5f6a2bd373cfe580a804ba94be14fc5dfe66 SHA1 8eb3b5d4234024fafdf14c58b19de430ba2c3f60 SHA256 bf264aae9c3905d59e7856f76206208c87f5d0dcf8676b488be4f3501b417ce1
