@@ -13,15 +13,17 @@ EGIT_REPO_URI="git://github.com/ayoy/qoauth.git"
 LICENSE="LGPL-2.1"
 SLOT="0"
 KEYWORDS=""
-IUSE="debug doc"
+IUSE="debug doc test"
 
-DEPEND="app-crypt/qca-ossl:2[debug?]"
-RDEPEND="${DEPEND}"
+DEPEND="app-crypt/qca:2[debug?]"
+RDEPEND="${DEPEND}
+	app-crypt/qca-ossl:2[debug?]"
 
 src_prepare() {
 	qt4-edge_src_prepare
 	sed -i -e '/^ *docs \\$/d' \
-		   -e "s!\(\$\${INSTALL_PREFIX}\)/lib!\1/$(get_libdir)!" ${PN}.pro
+		   -e "s!\(\$\${INSTALL_PREFIX}\)/lib!\1/$(get_libdir)!" src/src.pro
+	sed -i -e "s/\(.*\)lib$/\1$(get_libdir)/" src/pcfile.sh
 }
 
 src_install() {
@@ -31,4 +33,8 @@ src_install() {
 	if use doc; then
 		dohtml -r "${S}"/doc/html/* || die "Failed to install documentation"
 	fi
+}
+
+src_test() {
+	emake check || die "Make check failed. See above for details"
 }
