@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 Jun 2009; Dominik Kapusta <d@ayoy.net> qoauth-0.1.0.ebuild,
+  qoauth-9999.ebuild:
+  Fixed DEPENDS and RDEPENDS, added test IUSE
+
 *qoauth-9999 (25 Jun 2009)
 *qoauth-0.1.0 (25 Jun 2009)
 
